--- a/.gitmodules
+++ b/.gitmodules
@@ -4,11 +4,11 @@
   branch = dev/emc
 [submodule "ccpp/framework"]
   path = ccpp/framework
-  url = https://github.com/NCAR/ccpp-framework
+  url = https://github.com/SvetlanaKarol-NOAA/ccpp-framework
   branch = main
 [submodule "ccpp/physics"]
   path = ccpp/physics
-  url = https://github.com/NCAR/ccpp-physics
+  url = https://github.com/SvetlanaKarol-NOAA/ccpp-physics
   branch = main
 [submodule "upp"]
   path = upp
