--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "atmos_cubed_sphere"]
   path = atmos_cubed_sphere
-  url = https://github.com/NOAA-SWPC/GFDL_atmos_cubed_sphere
-  branch = dev/emc
+  url = https://github.com/SvetlanaKarol-NOAA/GFDL_atmos_cubed_sphere
+  branch = fv3_wamkappa
 [submodule "ccpp/framework"]
   path = ccpp/framework
   url = https://github.com/NCAR/ccpp-framework
